alteracoes_projeto_fred

--- a/index.html
+++ b/index.html
@@ -218,33 +218,35 @@
 
 
     <main class="pag_clientes">
-        <section class="logos">
-            <h1>Clientes</h1>
-            <p>Veja as empresas que já confiaram no trabalho de Fred Junco e transformaram suas equipes.</p>
-            <ul>
-                <li class="fileira-1"><img src="./img/fileira_1.svg" alt="Logo"></li>
-                <li class="fileira-2"><img src="./img/fileira_2.svg" alt="Logo"></li>
-            </ul>
-        </section>
+        
+            <section class="logos">
+                <h1>Clientes</h1>
+                <p>Veja as empresas que já confiaram no trabalho de Fred Junco e transformaram suas equipes.</p>
+                <ul>
+                    <li class="fileira-1"><img src="./img/fileira_1.svg" alt="Logo"></li>
+                    <li class="fileira-2"><img src="./img/fileira_2.svg" alt="Logo"></li>
+                </ul>
+            </section>
 
 
+        <section class="fundo">
+            <section class="campo_in_company">
+                <h1>In Company</h1>
+                <p>O maior desafio do RH é garantir um ambiente de trabalho produtivo e
+                    reter talentos. Fred Junco oferece treinamentos In Company personalizados
+                    que diagnosticam as necessidades da sua empresa e apresentam soluções práticas
+                    para aumentar a produtividade, reduzir turnover e melhorar a satisfação no ambiente corporativo.
+                </p>
+                <ul>
+                    <li><i class="bi bi-people"></i>Até 200 participantes</li>
+                    <li><i class="bi bi-patch-check"></i>Garantia de Satisfação</li>
+                    <li><i class="bi bi-terminal"></i>Possibilidade On-Line</li>
+                </ul>
+                <a href="#">Quero me cadastrar no In Company</a>
+            </section>
 
-        <section class="campo_in_company">
-            <h1>In Company</h1>
-            <p>O maior desafio do RH é garantir um ambiente de trabalho produtivo e
-                reter talentos. Fred Junco oferece treinamentos In Company personalizados
-                que diagnosticam as necessidades da sua empresa e apresentam soluções práticas
-                para aumentar a produtividade, reduzir turnover e melhorar a satisfação no ambiente corporativo.
-            </p>
-            <ul>
-                <li><i class="bi bi-people"></i>Até 200 participantes</li>
-                <li><i class="bi bi-patch-check"></i>Garantia de Satisfação</li>
-                <li><i class="bi bi-terminal"></i>Possibilidade On-Line</li>
-            </ul>
-            <a href="#">Quero me cadastrar no In Company</a>
-        </section>
-
-        <section class="imagem_ultima_pag">
+            <section class="imagem_ultima_pag">
+            </section>
         </section>
 
     </main>
