--- a/index.html
+++ b/index.html
@@ -6,65 +6,94 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto do Fred</title>
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+        crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
 
-    <main class="pagina_1">
+    <header class="header-pagina">
+        <nav class="navbar navbar-expand-lg navegacao">
+            <div class="container">
+                <a class="navbar-brand logotipo" href="#">
+                    <img src="./img/imagem-logo.png" alt="logotipo" width="200" height="60">
+                </a>
 
-        <header class="cabecalho">
+                <button class="navbar-toggler text-white btn btn-outline-secondary" type="button"
+                    data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbarNav" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
-            <img src="./img/imagem-logo.png" alt="Logo">
+                <div class="collapse navbar-collapse botoes" id="navbar">
+                    <ul class="navbar-nav ms-auto d-flex gap-4">
+                        <li class="nav-item ">
+                            <a class="nav-link active text-white botao_pagina_inicial" aria-current="page"
+                                href="#">Página Inicial</a>
+                        </li>
+                        <li class="nav-item ">
+                            <a class="nav-link text-white botao_contato" href="#">Contato</a>
+                        </li>
+                        <li class="nav-item ">
+                            <a class="nav-link  text-white border border-white botao_in_company" href="#">In Company</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
 
-            <nav>
-                <ul>
-                    <a href="#">Página Inicial</a>
-                    <a href="#">Contato</a>
-                    <a href="#" class="botao">In Company</a>
-                </ul>
-            </nav>
-
-        </header>
-        <section class="informacoes_pag-1">
-            <h2>Transforme sua equipe em uma <span class="cor_verde">potência de Resultados!</span></h2>
-            <p>Com mais de 20 anos de experiência, Fred Junco oferece treinamentos In Company que resolvem problemas
-                específicos e otimizam o desempenho da sua equipe.
-            </p>
-            <a href="#" class="contato">Entre em contato com o Fred</a>
+    <main class="pagina_1 min-height-100">
+        <section class="informacoes_pag-1 container align-items-center d-flex min-height-100">
+            <div class="itens_pagina_1">
+                <h2 class="titulo mb-3">Transforme sua equipe em uma <span class="cor_verde">potência de
+                        Resultados!</span></h2>
+                <p>Com mais de 20 anos de experiência, Fred Junco oferece treinamentos In Company que resolvem problemas
+                    específicos e otimizam o desempenho da sua equipe.
+                </p>
+                <a href="#" class="contato">Entre em contato com o Fred</a>
+            </div>
         </section>
 
     </main>
 
     <section class="pagina_descricao">
-        <main class="imagem_pag_2">
-            <img src="./img/imagen_pag2.jpg" alt="Imagem do fred">
-        </main>
+        <div class="row">
+            <main class="imagem_pag_2 col-sm-12 col-md-6 col-lg-6 col-12">
+            </main>
 
-        <main class="descricao_do_fred">
-            <div class="descricao">
-                <h1 class="titulo_descricao">In Company</h1>
-                <p>
-                    O maior desafio do RH é garantir um ambiente
-                    de trabalho produtivo e reter talentos. Fred Junco oferece treinamentos
-                    In Company personalizados que diagnosticam as necessidades da sua empresa e
-                    apresentam soluções práticas para aumentar a produtividade, reduzir turnover e melhorar a satisfação
-                    no ambiente corporativo.
-                </p>
-                <ul>
-                    <li><i class="bi bi-people"></i>Até 200 participantes</li>
-                    <li><i class="bi bi-patch-check"></i>Garantia de Satisfação</li>
-                    <li><i class="bi bi-terminal"></i>Possibilidade On-Line</li>
-                </ul>
+            <main class="descricao_do_fred col-sm-12 col-md-6 col-lg-6 col-12">
+                <div class="descricao">
+                    <h1 class="titulo_descricao">In Company</h1>
+                    <p>
+                        O maior desafio do RH é garantir um ambiente
+                        de trabalho produtivo e reter talentos. Fred Junco oferece treinamentos
+                        In Company personalizados que diagnosticam as necessidades da sua empresa e
+                        apresentam soluções práticas para aumentar a produtividade, reduzir turnover e melhorar a
+                        satisfação
+                        no ambiente corporativo.
+                    </p>
+                    <ul>
+                        <li><i class="bi bi-people"></i>Até 200 participantes</li>
+                        <li><i class="bi bi-patch-check"></i>Garantia de Satisfação</li>
+                        <li><i class="bi bi-terminal"></i>Possibilidade On-Line</li>
+                    </ul>
 
-                <a href="#">Quero me cadastrar no In Company</a>
-            </div>
-        </main>
+                    <a class="botao_pag_descricao" href="#">Quero me cadastrar no In Company</a>
+                </div>
+            </main>
+        </div>
     </section>
 
-    <section class="pagina_xeque_mate">
-        <main class="descricao_xeque_mate">
-            <div class="mentoria_xeque_mate">
+    <!-- <section class="pagina_xeque_mate row">
+        <main class="descricao_xeque_mate col-sm-12 col-md-6 col-lg-6 col-12">
+            <div class="mentoria_xeque_mate  ">
                 <h1>Mentoria Xeque-Mate</h1>
                 <p>A Mentoria Xeque-Mate é um programa
                     completo focado em vendas e experiência
@@ -83,7 +112,7 @@
                 <a href="#">Quero conhecer a Mentoria</a>
             </div>
         </main>
-        <main class="imagem_pag-3">
+        <main class="imagem_pag-3 col-sm-12 col-md-6 col-lg-6 col-12">
             <img src="./img/imagem_pag3.jpg" alt="Imagem do Fred">
         </main>
     </section>
@@ -252,4 +281,4 @@
     </main>
 </body>
 
-</html>
+</html> -->
