--- a/index.html
+++ b/index.html
@@ -91,33 +91,34 @@
         </div>
     </section>
 
-    <!-- <section class="pagina_xeque_mate row">
+    <section class="pagina_xeque_mate row">
         <main class="descricao_xeque_mate col-sm-12 col-md-6 col-lg-6 col-12">
-            <div class="mentoria_xeque_mate  ">
-                <h1>Mentoria Xeque-Mate</h1>
-                <p>A Mentoria Xeque-Mate é um programa
-                    completo focado em vendas e experiência
-                    do cliente (CX). Desenvolvida por fred
-                    Junco, a mentoria ajuda profissionais
-                    a aprimorar estratégias, técnicas e
-                    mindset para atingir resultados
-                    extraordinários no mercado.
-                </p>
-                <ul>
-                    <li><i class="bi bi-check-circle-fill"></i>Para Empreendedores</li>
-                    <li><i class="bi bi-check-circle-fill"></i>Para Líderes Comerciais</li>
-                    <li><i class="bi bi-check-circle-fill"></i>Para Empresas que Faturam até 100k por Mês</li>
-                </ul>
+            <div class="row">
+                <div class="mentoria_xeque_mate col-sm-12 col-md-6 col-lg-6 col-12">
+                    <h1>Mentoria Xeque-Mate</h1>
+                    <p>A Mentoria Xeque-Mate é um programa
+                        completo focado em vendas e experiência
+                        do cliente (CX). Desenvolvida por fred
+                        Junco, a mentoria ajuda profissionais
+                        a aprimorar estratégias, técnicas e
+                        mindset para atingir resultados
+                        extraordinários no mercado.
+                    </p>
+                    <ul>
+                        <li><i class="bi bi-check-circle-fill"></i>Para Empreendedores</li>
+                        <li><i class="bi bi-check-circle-fill"></i>Para Líderes Comerciais</li>
+                        <li><i class="bi bi-check-circle-fill"></i>Para Empresas que Faturam até 100k por Mês</li>
+                    </ul>
 
-                <a href="#">Quero conhecer a Mentoria</a>
+                    <a href="#">Quero conhecer a Mentoria</a>
+                </div>
             </div>
         </main>
         <main class="imagem_pag-3 col-sm-12 col-md-6 col-lg-6 col-12">
-            <img src="./img/imagem_pag3.jpg" alt="Imagem do Fred">
         </main>
     </section>
 
-    <section class="pagina_quick_wins">
+    <!-- <section class="pagina_quick_wins">
         <main class="descricao_quick_wins">
             <div>
                 <h1>Quick Wins</h1>
