--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
 
     <section class="pagina_xeque_mate row">
         <main class="descricao_xeque_mate col-sm-12 col-md-6 col-lg-6 col-12">
-            <div class="row">
-                <div class="mentoria_xeque_mate col-sm-12 col-md-6 col-lg-6 col-12">
+            <div class="div_grid row">
+                <div class="mentoria_xeque_mate">
                     <h1>Mentoria Xeque-Mate</h1>
                     <p>A Mentoria Xeque-Mate é um programa
                         completo focado em vendas e experiência
@@ -104,13 +104,16 @@
                         mindset para atingir resultados
                         extraordinários no mercado.
                     </p>
-                    <ul>
-                        <li><i class="bi bi-check-circle-fill"></i>Para Empreendedores</li>
-                        <li><i class="bi bi-check-circle-fill"></i>Para Líderes Comerciais</li>
-                        <li><i class="bi bi-check-circle-fill"></i>Para Empresas que Faturam até 100k por Mês</li>
+                    <ul class="lista">
+                        <li class="items-lista"><i class="icones_lista bi bi-check-circle-fill"></i>Para Empreendedores
+                        </li>
+                        <li class="items-lista"><i class="icones_lista bi bi-check-circle-fill"></i>Para Líderes
+                            Comerciais</li>
+                        <li class="items-lista"><i class="icones_lista bi bi-check-circle-fill"></i>Para Empresas que
+                            Faturam até 100k por Mês</li>
                     </ul>
 
-                    <a href="#">Quero conhecer a Mentoria</a>
+                    <a class="botao" href="#">Quero conhecer a Mentoria</a>
                 </div>
             </div>
         </main>
@@ -118,73 +121,78 @@
         </main>
     </section>
 
-    <!-- <section class="pagina_quick_wins">
-        <main class="descricao_quick_wins">
-            <div>
-                <h1>Quick Wins</h1>
-                <h2>Aprendizados para colocar em ação e alcançar resultados imediatos</h2>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur. Et venenatis proin mauris egestas cursus arcu. Placerat at
-                    malesuada dui vel vivamus amet vitae risus elementum. Aliquet maecenas consequat nunc vel duis.
-                    Tempus id suscipit egestas duis augue. Varius duis sed a vitae aliquam sollicitudin morbi. Elit
-                    penatibus ornare amet ac tristique. Ultrices.
-                </p>
-                <a href="#">Quero adquirir meu livro</a>
-            </div>
-        </main>
+    <section class="pagina_quick_wins">
+        <div class="row">
+            <main class="descricao_quick_wins col-sm-12 col-md-6 col-lg-6 col-12">
+                <div>
+                    <h1>Quick Wins</h1>
+                    <h2>Aprendizados para colocar em ação e alcançar resultados imediatos</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur. Et venenatis proin mauris egestas cursus arcu. Placerat
+                        at
+                        malesuada dui vel vivamus amet vitae risus elementum. Aliquet maecenas consequat nunc vel duis.
+                        Tempus id suscipit egestas duis augue. Varius duis sed a vitae aliquam sollicitudin morbi. Elit
+                        penatibus ornare amet ac tristique. Ultrices.
+                    </p>
+                    <a href="#">Quero adquirir meu livro</a>
+                </div>
+            </main>
 
-        <main class="imagem_pag-4">
-            <section class="fundo_imagem-4">
-                <img src="./img/imagem_pag4.png" alt="Imagem do Fred">
-            </section>
+            <main class="imagem_pag-4 col-sm-12 col-md-6 col-lg-6 col-12 ">
+                <section class="fundo_imagem-4">
+                    <img src="./img/imagem_pag4.png" alt="Imagem do Fred">
+                </section>
 
-        </main>
+            </main>
+        </div>
     </section>
 
     <main class="pagina_videos">
-        <section class="titulo">
-            <h1><strong>Vídeos do Fred</strong></h1>
-            <p>Explore uma seleção de conteúdos exclusivos, incluindo palestras, vídeos e insights compartilhados por
-                Fred Junco.</p>
-        </section>
+        <div class="row">
+            <section class="titulo">
+                <h1><strong>Vídeos do Fred</strong></h1>
+                <p>Explore uma seleção de conteúdos exclusivos, incluindo palestras, vídeos e insights compartilhados
+                    por
+                    Fred Junco.</p>
+            </section>
 
-        <section class="videos">
-            <figure class="cards card-1">
-                <figcaption>
-                    <h3>Como me enganar como cliente em 7 passos</h3>
-                    <p>05 abr de 2022</p>
-                    <a href="#">Acessar agora <i class="bi bi-arrow-up-right"></i></a>
-                </figcaption>
-            </figure>
+            <section class="videos">
+                <figure class="cards card-1 col-sm-12 col-md-3 col-lg-6 col-12">
+                    <figcaption>
+                        <h3>Como me enganar como cliente em 7 passos</h3>
+                        <p>05 abr de 2022</p>
+                        <a href="#">Acessar agora <i class="bi bi-arrow-up-right"></i></a>
+                    </figcaption>
+                </figure>
 
-            <figure class="cards card-2">
-                <figcaption>
-                    <h3>Como me enganar como cliente em 7 passos</h3>
-                    <p>05 abr de 2022</p>
-                    <a href="#">Acessar agora <i class="bi bi-arrow-up-right"></i></a>
-                </figcaption>
-            </figure>
+                <figure class="cards card-2 col-sm-12 col-md-3 col-lg-6 col-12">
+                    <figcaption>
+                        <h3>Como me enganar como cliente em 7 passos</h3>
+                        <p>05 abr de 2022</p>
+                        <a href="#">Acessar agora <i class="bi bi-arrow-up-right"></i></a>
+                    </figcaption>
+                </figure>
 
-            <figure class="cards card-3">
-                <figcaption>
-                    <h3>Como me enganar como cliente em 7 passos</h3>
-                    <p>05 abr de 2022</p>
-                    <a href="#">Acessar agora <i class="bi bi-arrow-up-right"></i></a>
-                </figcaption>
-            </figure>
+                <figure class="cards card-3 col-sm-12 col-md-3 col-lg-6 col-12">
+                    <figcaption>
+                        <h3>Como me enganar como cliente em 7 passos</h3>
+                        <p>05 abr de 2022</p>
+                        <a href="#">Acessar agora <i class="bi bi-arrow-up-right"></i></a>
+                    </figcaption>
+                </figure>
 
-            <figure class="cards card-4">
-                <figcaption>
-                    <h3>Como me enganar como cliente em 7 passos</h3>
-                    <p>05 abr de 2022</p>
-                    <a href="#">Acessar agora <i class="bi bi-arrow-up-right"></i></a>
-                </figcaption>
-            </figure>
-        </section>
+                <figure class="cards card-4 col-sm-12 col-md-3 col-lg-6 col-12">
+                    <figcaption>
+                        <h3>Como me enganar como cliente em 7 passos</h3>
+                        <p>05 abr de 2022</p>
+                        <a href="#">Acessar agora <i class="bi bi-arrow-up-right"></i></a>
+                    </figcaption>
+                </figure>
+            </section>
 
-        <a href="#" class="botao_canal">Acesse o canal do Fred Junco <i class="bi bi-arrow-up-right"></i></a>
+        </div>
+            <a href="#" class="botao_canal">Acesse o canal do Fred Junco <i class="bi bi-arrow-up-right"></i></a>
     </main>
-    </section>
 
     <main class="blog_fred">
         <section class="titulo_blog">
@@ -282,4 +290,4 @@
     </main>
 </body>
 
-</html> -->
+</html> 
